--- a/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
@@ -5,15 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentManagerWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="LoginWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
-        <Button Content="Afficher" HorizontalAlignment="Left" Margin="441,151,0,0" VerticalAlignment="Top" Width="68" RenderTransformOrigin="-1.824,-1.023" Height="22" Click="Button_Click"/>
-        <TextBox x:Name="id_filiere" HorizontalAlignment="Left" Height="23" Margin="170,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" SpellCheck.IsEnabled="True"/>
-        <TextBox x:Name="nom_filiere" HorizontalAlignment="Left" Height="24" Margin="170,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="respo" HorizontalAlignment="Left" Height="23" Margin="170,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Id :" HorizontalAlignment="Left" Margin="75,108,0,0" VerticalAlignment="Top"/>
-        <Label Content="nom :" HorizontalAlignment="Left" Margin="75,157,0,0" VerticalAlignment="Top"/>
-        <Label Content="Responsable :" HorizontalAlignment="Left" Margin="55,198,0,0" VerticalAlignment="Top" Width="88"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="23*"/>
+            <ColumnDefinition Width="765*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="16*"/>
+            <RowDefinition Height="27*"/>
+            <RowDefinition Height="186*"/>
+            <RowDefinition Height="214*"/>
+        </Grid.RowDefinitions>
+        <Rectangle Margin="0,0,0,168" Visibility="Visible" HorizontalAlignment="Right" Width="792" Height="274" VerticalAlignment="Bottom" Grid.RowSpan="4" Grid.ColumnSpan="3"  >
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0,0.5" >
+                    <GradientStop Color="#F7FDFE" Offset="1.5" />
+                    <GradientStop Color="#A3CBD0" Offset=".5" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Image Source="Assets/ensa-safi-.png" Margin="0,0,200,11" HorizontalAlignment="Right" Width="362" Grid.Column="2" Grid.Row="2" Height="165" VerticalAlignment="Bottom" />
+        <Rectangle Margin="0,131,152,38"  Fill="White" HorizontalAlignment="Right" Width="488" RadiusY="12" RadiusX="12" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2">
+            <Rectangle.Effect>
+                <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="15" RenderingBias="Quality" ShadowDepth="1"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Grid Margin="124,131,152,38" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2">
 
+        </Grid>
+        <Label Content="Username :" HorizontalAlignment="Left" Margin="178,179,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2"/>
+        <Label Content="Password :" HorizontalAlignment="Left" Margin="178,45.5,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" Grid.Row="3" Grid.Column="2"/>
+        <Button x:Name="login1" Content="Login" HorizontalAlignment="Left" Margin="308,117.5,0,0" VerticalAlignment="Top" Width="106" Height="40" Background="#FFCDE4E7" RenderTransformOrigin="-1.233,0.375" FontWeight="Bold" FontSize="16" Grid.Row="3" Grid.Column="2">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="8"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <TextBox x:Name="login" HorizontalAlignment="Left" Height="22" Margin="388,183,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2"/>
+        <TextBox x:Name="password" HorizontalAlignment="Left" Height="24" Margin="388,45.5,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Row="3" Grid.Column="2"/>
+        <Label x:Name="error" Content="" Grid.Column="2" HorizontalAlignment="Left" Margin="178,81.5,0,0" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="-1,0.731"/>
+        <Label Content="Gestion des étudiants" HorizontalAlignment="Left" Margin="0,-10,0,0" VerticalAlignment="Top" FontSize="24" FontStyle="Italic" Height="88" Width="484" FontWeight="Bold" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
