--- a/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentManagerWPF"
         mc:Ignorable="d"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="LoginWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,7 +19,7 @@
             <RowDefinition Height="186*"/>
             <RowDefinition Height="214*"/>
         </Grid.RowDefinitions>
-        <Rectangle Margin="0,0,0,168" Visibility="Visible" HorizontalAlignment="Right" Width="792" Height="274" VerticalAlignment="Bottom" Grid.RowSpan="4" Grid.ColumnSpan="3"  >
+        <Rectangle Margin="0,0,0,135.517" Visibility="Visible" HorizontalAlignment="Right" Width="792" Height="307" VerticalAlignment="Bottom" Grid.RowSpan="4" Grid.ColumnSpan="3"  >
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0,0.5" >
                     <GradientStop Color="#F7FDFE" Offset="1.5" />
@@ -26,27 +27,31 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Image Source="Assets/ensa-safi-.png" Margin="0,0,200,11" HorizontalAlignment="Right" Width="362" Grid.Column="2" Grid.Row="2" Height="165" VerticalAlignment="Bottom" />
-        <Rectangle Margin="0,131,152,38"  Fill="White" HorizontalAlignment="Right" Width="488" RadiusY="12" RadiusX="12" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2">
+        <Image Source="Assets/ensa-safi-.png" Margin="0,-28,170,10" HorizontalAlignment="Right" Width="470" Grid.Column="2" Height="247" VerticalAlignment="Bottom" Grid.RowSpan="3" RenderTransformOrigin="0.41,0.535" />
+        <Rectangle Margin="0,176,126,37.517"  Fill="White" HorizontalAlignment="Right" Width="514" RadiusY="12" RadiusX="12" Grid.Row="2" Grid.Column="2" RenderTransformOrigin="0.498,0.327" Grid.RowSpan="2">
             <Rectangle.Effect>
                 <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="15" RenderingBias="Quality" ShadowDepth="1"/>
             </Rectangle.Effect>
         </Rectangle>
         <Grid Margin="124,131,152,38" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2">
 
+            <TextBlock Text="Gestion Des Etudiants" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="134,0,116,0" Foreground="Gray" FontSize="24" Width="238" />
+            <StackPanel VerticalAlignment="Center" Margin="10">
+                <TextBox materialDesign:HintAssist.Hint="Username" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  HorizontalAlignment="Right" Width="468" Margin="0,0,0,10" />
+                <PasswordBox materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" HorizontalAlignment="Right" Width="468"  Margin="0,0.1"/>
+            </StackPanel>
+
+
+            <Button x:Name="login1" Content="LOGIN" Margin="191,196,181,-13" VerticalAlignment="Top" Height="48" Background="#FFCDE4E7" RenderTransformOrigin="-1.233,0.375" FontWeight="Bold" FontSize="16">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="8"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
-        <Label Content="Username :" HorizontalAlignment="Left" Margin="178,179,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2"/>
-        <Label Content="Password :" HorizontalAlignment="Left" Margin="178,45.5,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16" Grid.Row="3" Grid.Column="2"/>
-        <Button x:Name="login1" Content="Login" HorizontalAlignment="Left" Margin="308,117.5,0,0" VerticalAlignment="Top" Width="106" Height="40" Background="#FFCDE4E7" RenderTransformOrigin="-1.233,0.375" FontWeight="Bold" FontSize="16" Grid.Row="3" Grid.Column="2">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="8"/>
-                </Style>
-            </Button.Resources>
-        </Button>
-        <TextBox x:Name="login" HorizontalAlignment="Left" Height="22" Margin="388,183,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2"/>
-        <TextBox x:Name="password" HorizontalAlignment="Left" Height="24" Margin="388,45.5,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Grid.Row="3" Grid.Column="2"/>
-        <Label x:Name="error" Content="" Grid.Column="2" HorizontalAlignment="Left" Margin="178,81.5,0,0" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="-1,0.731"/>
-        <Label Content="Gestion des étudiants" HorizontalAlignment="Left" Margin="0,-10,0,0" VerticalAlignment="Top" FontSize="24" FontStyle="Italic" Height="88" Width="484" FontWeight="Bold" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
+
+
+
     </Grid>
 </Window>
