--- a/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
@@ -1,25 +1,15 @@
-﻿<Window x:Class="StudentManagerWPF.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentManagerWPF"
-        mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="StudentManagerWPF.MainWindow"
+        mc:Ignorable="d"
         Title="LoginWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="5*"/>
-            <ColumnDefinition Width="23*"/>
-            <ColumnDefinition Width="765*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="16*"/>
-            <RowDefinition Height="27*"/>
-            <RowDefinition Height="186*"/>
-            <RowDefinition Height="214*"/>
-        </Grid.RowDefinitions>
-        <Rectangle Margin="0,0,0,135.517" Visibility="Visible" HorizontalAlignment="Right" Width="792" Height="307" VerticalAlignment="Bottom" Grid.RowSpan="4" Grid.ColumnSpan="3"  >
+        <Rectangle Height="307" VerticalAlignment="Top" >
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0,0.5" >
                     <GradientStop Color="#F7FDFE" Offset="1.5" />
@@ -27,29 +17,29 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Image Source="Assets/ensa-safi-.png" Margin="0,-28,170,10" HorizontalAlignment="Right" Width="470" Grid.Column="2" Height="247" VerticalAlignment="Bottom" Grid.RowSpan="3" RenderTransformOrigin="0.41,0.535" />
-        <Rectangle Margin="0,176,126,37.517"  Fill="White" HorizontalAlignment="Right" Width="514" RadiusY="12" RadiusX="12" Grid.Row="2" Grid.Column="2" RenderTransformOrigin="0.498,0.327" Grid.RowSpan="2">
+        <Image Source="Assets/ensa-safi-.png" VerticalAlignment="Top" Margin="-30" Width="600" Height="189" />
+        <TextBlock Text="Gestion Des Etudiants" HorizontalAlignment="Center" Foreground="Black" FontSize="24" FontWeight="Bold" Margin="279,133,266,260" />
+
+        <Rectangle  Width="514" Height ="190" RadiusY="12" RadiusX="12" Fill="White" VerticalAlignment="Bottom" Margin="0,70" >
             <Rectangle.Effect>
                 <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="15" RenderingBias="Quality" ShadowDepth="1"/>
             </Rectangle.Effect>
         </Rectangle>
-        <Grid Margin="124,131,152,38" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2">
+        <Grid Width="514" Height ="190" VerticalAlignment="Bottom" Margin="0,70">
 
-            <TextBlock Text="Gestion Des Etudiants" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="134,0,116,0" Foreground="Gray" FontSize="24" Width="238" />
-            <StackPanel VerticalAlignment="Center" Margin="10">
-                <TextBox materialDesign:HintAssist.Hint="Username" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  HorizontalAlignment="Right" Width="468" Margin="0,0,0,10" />
-                <PasswordBox materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" HorizontalAlignment="Right" Width="468"  Margin="0,0.1"/>
+            <StackPanel VerticalAlignment="Center" Margin="10,-15,10,15">
+                <Label x:Name="error" HorizontalAlignment="Center"  VerticalAlignment="Top" Foreground="#FFFF0606"/>
+                <TextBox x:Name="username" materialDesign:HintAssist.Hint="Username" Style="{StaticResource MaterialDesignFloatingHintTextBox}"   Width="458" Margin="0,10" />
+                <PasswordBox x:Name="mdp" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"  Width="458"  Margin="0,10"/>
             </StackPanel>
-
-
-            <Button x:Name="login1" Content="LOGIN" Margin="191,196,181,-13" VerticalAlignment="Top" Height="48" Background="#FFCDE4E7" RenderTransformOrigin="-1.233,0.375" FontWeight="Bold" FontSize="16">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="8"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
         </Grid>
+        <Button x:Name="login" Content="LOGIN"  Click="login_Click"  VerticalAlignment="Bottom" Height="48" Background="#FFCDE4E7" Margin="45" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" Width="116">
+            <Button.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="8"/>
+                </Style>
+            </Button.Resources>
+        </Button>
 
 
 
