--- a/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
@@ -28,7 +28,43 @@
 
         </Grid>
         <Grid Height="350">
-            
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="20"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" Grid.Column="1">
+                    <ComboBox x:Name="ComboBox1"  Width="auto"  IsEditable="True" IsReadOnly="True" Text="-- Choisir une filiere --" Margin="0,0,0,100" SelectionChanged="ComboBox1_SelectionChanged">
+                        <ComboBoxItem>Genie informatique</ComboBoxItem>
+                        <ComboBoxItem>Genie industriel</ComboBoxItem>
+                        <ComboBoxItem>Genie Réseaux et Telecom</ComboBoxItem>
+                        <ComboBoxItem>Genie Procédé Ciramique</ComboBoxItem>
+                    </ComboBox>
+                    <Border   Height="80" Width="auto" CornerRadius="4" BorderThickness="1" BorderBrush="#2fb7eb" Background="#cde4e7">
+                    <StackPanel >
+                            <WrapPanel Background="#2fb7eb" Width="190">
+                            <TextBlock TextAlignment="Center" Margin="0,0,0,0">Informations sur la filiere</TextBlock>
+                        </WrapPanel>
+                        <WrapPanel>
+                            <Label>Nom :</Label>
+                            <TextBlock Text="nom_Filiere" Padding="6,4,0,0"/>
+                        </WrapPanel>
+                        <WrapPanel>
+                            <Label>Responsable :</Label>
+                            <TextBlock Text="nom_Respo" Padding="3,4,0,0"/>
+                        </WrapPanel>
+                    </StackPanel>
+                </Border>
+                </StackPanel>
+                <WrapPanel Grid.Row="0" Grid.Column="2" x:Name="cards">
+                </WrapPanel>
+            </Grid>
         </Grid>
     </StackPanel>
 </Window>
