--- a/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
@@ -17,54 +17,69 @@
             <Image Source="Assets/shut.png"  MouseLeftButtonDown="Close" Margin="2" />
             </StackPanel>
         </Grid>
-        <Grid Height="80">
+        <Grid Height="60">
             <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10 0" Background="#cde4e7" >
                 <Button Uid="0" Width="260" Content="GESTION DES ETUDIANTS " Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" Click="Choix_menu"/>
                 <Button Uid="1" Width="260" Content="GESTION DES FILIERES " Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" Click="Choix_menu"/>
                 <Button Uid="2" Width="260" Content="STATISTIQUE " Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Black" Click="Choix_menu" />
             </StackPanel>
-            <Grid x:Name="GridCursor" Width="260" Height="5" Background="#2fb7eb" Margin="10,0,0,-20" HorizontalAlignment="Left"/>
+            <Grid x:Name="GridCursor" Width="260" Height="5" Background="#2fb7eb" Margin="10,0,0,-40" HorizontalAlignment="Left"/>
 
 
         </Grid>
         <Grid Height="350">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20"/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="20"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-
-                <StackPanel Grid.Row="0" Grid.Column="1">
-                    <ComboBox x:Name="ComboBox1"  Width="auto"  IsEditable="True" IsReadOnly="True" Text="-- Choisir une filiere --" Margin="0,0,0,100" SelectionChanged="ComboBox1_SelectionChanged">
+            <Rectangle  Width="250" Height ="340" Margin="15 0" RadiusY="12" RadiusX="12" Fill="White" HorizontalAlignment="Left" >
+                <Rectangle.Effect>
+                    <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="10" RenderingBias="Quality" ShadowDepth="1"/>
+                </Rectangle.Effect>
+            </Rectangle>
+            <Grid Width="250" Height ="340" Margin="15 0" HorizontalAlignment="Left">
+            <StackPanel >
+                    <ComboBox x:Name="ComboBox1"  Width="168"  IsEditable="True" IsReadOnly="True" Margin="15" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Choisissez une filiere" Style="{StaticResource MaterialDesignFloatingHintComboBox}"  SelectionChanged="ComboBox1_SelectionChanged">
                         <ComboBoxItem>Genie informatique</ComboBoxItem>
                         <ComboBoxItem>Genie industriel</ComboBoxItem>
                         <ComboBoxItem>Genie Réseaux et Telecom</ComboBoxItem>
                         <ComboBoxItem>Genie Procédé Ciramique</ComboBoxItem>
                     </ComboBox>
-                    <Border   Height="80" Width="auto" CornerRadius="4" BorderThickness="1" BorderBrush="#2fb7eb" Background="#cde4e7">
-                    <StackPanel >
-                            <WrapPanel Background="#2fb7eb" Width="190">
-                            <TextBlock TextAlignment="Center" Margin="0,0,0,0">Informations sur la filiere</TextBlock>
-                        </WrapPanel>
-                        <WrapPanel>
-                            <Label>Nom :</Label>
-                            <TextBlock Text="nom_Filiere" Padding="6,4,0,0"/>
-                        </WrapPanel>
-                        <WrapPanel>
-                            <Label>Responsable :</Label>
-                            <TextBlock Text="nom_Respo" Padding="3,4,0,0"/>
-                        </WrapPanel>
-                    </StackPanel>
-                </Border>
+                    <Border Margin="0,140,0,0" Height="100" Width="200" CornerRadius="4"  BorderThickness="1" BorderBrush="#2fb7eb" Background="#cde4e7">
+
+                        <StackPanel>
+                            <WrapPanel Background="#2fb7eb" Width="200">
+                                <TextBlock TextAlignment="Center" Margin="18,10,0,10" FontSize="14">Informations sur la filiere</TextBlock>
+                            </WrapPanel>
+                            <WrapPanel>
+                                <Label Padding="10,10,0,10">Nom :</Label>
+                                <TextBlock Text=" nom_Filiere" Padding="6,10,0,0"/>
+                            </WrapPanel>
+                            <WrapPanel>
+                                <Label Padding="10,0,0,10">Responsable :</Label>
+                                <TextBlock Text=" nom_Respo" Padding="3,0,0,0"/>
+                            </WrapPanel>
+                        </StackPanel>
+                    </Border>
                 </StackPanel>
-                <WrapPanel Grid.Row="0" Grid.Column="2" x:Name="cards">
-                </WrapPanel>
             </Grid>
+            <Rectangle  Width="510" Height ="340" Margin="15 0" RadiusY="12" RadiusX="12" Fill="White" HorizontalAlignment="Right" >
+                <Rectangle.Effect>
+                    <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="10" RenderingBias="Quality" ShadowDepth="1"/>
+                </Rectangle.Effect>
+            </Rectangle>
+            <Grid Width="510" Height ="340" Margin="15 0" HorizontalAlignment="Right">
+                <ScrollViewer>
+                    
+                    <WrapPanel Grid.Row="0" Grid.Column="2" x:Name="cards" Margin="10" />
+                    
+                    
+                </ScrollViewer>
+            </Grid>
+
+
+
+
+
+
+
+
         </Grid>
     </StackPanel>
 </Window>
