--- a/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MainWindow.xaml
@@ -7,8 +7,12 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="StudentManagerWPF.MainWindow"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
+        Title="LoginWindow" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None" KeyDown="Window_KeyDown">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Rectangle Height="307" VerticalAlignment="Top" >
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0,0.5" >
@@ -17,7 +21,7 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Grid>
+        <Grid Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="7*"></RowDefinition>
@@ -26,7 +30,7 @@
             <Image Source="Assets/shut.png" Grid.Row="0" Height="15" Width="15" HorizontalAlignment="Right" MouseLeftButtonDown="CloseClick" VerticalAlignment="Top" Margin="0,10,10,0"/>
             <Image Source="Assets/mini.png" Grid.Row="0" Height="15" Width="15" MouseLeftButtonDown="MinimizeClick" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,40,0"/>
         </Grid>
-        <Grid HorizontalAlignment="Center" Height="450" >
+        <Grid HorizontalAlignment="Center" Height="450" Margin="116,0" Grid.RowSpan="2" >
             <Image Source="Assets/ensa-safi-.png" VerticalAlignment="Top" Margin="-20" Width="600" Height="189" />
             <Label Content="Gestion Des Etudiants" HorizontalAlignment="Center" Foreground="Black" FontSize="24" FontWeight="Bold" Width="auto" Height="auto" Margin="159,120,154,281"  />
 
