--- a/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
@@ -303,7 +303,16 @@
 
                 <TabItem Header="GESTION DES FILIERES">
                     <Grid>
+                    <Rectangle  Width="960" Height ="440" Margin="15 0" RadiusY="12" RadiusX="12" Fill="White" HorizontalAlignment="Center" >
+                        <Rectangle.Effect>
+                            <DropShadowEffect Color="#FFC1D3E4" Direction="0" BlurRadius="10" RenderingBias="Quality" ShadowDepth="1"/>
+                        </Rectangle.Effect>
+                    </Rectangle>
+                    
+                        
                         <Grid Width="650" Height ="430" Margin="15 0" HorizontalAlignment="Center">
+                            <Label Content="Double click sur l'item pour le modifier "  HorizontalAlignment="Center"/>
+
 
 
 
@@ -319,14 +328,42 @@
 				  StrokeThickness="2"
 				  Stretch="Fill"
                   />
+                                        
+                                            
+                                       
                                         <Style TargetType="{x:Type telerik:CarouselItem}">
                                             <Setter Property="Template">
                                                 <Setter.Value>
                                                     <ControlTemplate TargetType="{x:Type telerik:CarouselItem}">
-                                                        <Grid x:Name="grid"
-								  Height="180"
-								  HorizontalAlignment="Left"
-								  Width="140" Margin="0 50 0 -110">
+                                                        <ControlTemplate.Triggers>
+                                                            <Trigger Property="IsMouseOver"
+
+                             Value="True">
+                                                                <Setter Property="Effect">
+                                                                    <Setter.Value>
+                                                                        <DropShadowEffect Color="Blue"
+
+                                                  ShadowDepth="2"
+
+                                                  Direction="315"
+
+                                                  Opacity="0.5" />
+                                                                    </Setter.Value>
+                                                                </Setter>
+                                                                <Setter Property="Cursor" Value="Hand" />
+
+
+
+                                                            </Trigger>
+                                                 
+                                                                
+
+                                                            
+
+
+                                                        </ControlTemplate.Triggers>
+                                                        <Grid x:Name="grid" Height="180"  HorizontalAlignment="Left"   Width="140" Margin="0 110 0 0">
+                                                            
                                                             <Border BorderThickness="1"
 										CornerRadius="4">
                                                                 <Border.Background>
@@ -451,6 +488,11 @@
                                                     </ControlTemplate>
                                                 </Setter.Value>
                                             </Setter>
+                                            
+                                            
+                                            
+                                                
+                                            
                                         </Style>
                                     </Grid.Resources>
 
@@ -469,14 +511,17 @@
 							 VirtualizingStackPanel.IsVirtualizing="False" MouseDoubleClick="MyCarousel_MouseDoubleClick" Loaded="MyCarousel_Loaded" >
                                         <telerik:RadCarousel.ItemsPanel >
                                             <ItemsPanelTemplate>
-                                                <telerik:RadCarouselPanel  Path="{StaticResource path}" 
-                                                />
+                                                <telerik:RadCarouselPanel  Path="{StaticResource path}" />
+
+
                                             </ItemsPanelTemplate>
                                         </telerik:RadCarousel.ItemsPanel>
                                     </telerik:RadCarousel>
 
                                 </Grid>
+
                                 <Grid>
+
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10">
 
                                         <TextBox x:Name="TextBoxSearchName"  materialDesign:HintAssist.Hint="Cherchez la filière selon son Nom" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Width="458" Margin="80 50 0 0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
@@ -492,11 +537,12 @@
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="50">
                                 <Image Source="Assets/Add.png" MouseLeftButtonDown="Ajouter"  HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 88"  Width="20" Height="20"/>
 
-                                <Label  Content="Ajoutez une Filiere " Style="{StaticResource MaterialDesignLabel}" Margin=" 0 85" />
+                                <Label  Content="Ajoutez une Filiere " Style="{StaticResource MaterialDesignLabel}" Margin=" 0 85" FontWeight="Bold" FontStyle="Italic" MouseLeftButtonDown="Label_MouseLeftButtonDown" />
 
 
                             </StackPanel>
                         </Grid>
+
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="25">
                             <Image Source="Assets/Fleft.png"  MouseLeftButtonDown="Fleft"  Width="30" Height="30"/>
                             <Image Source="Assets/left.png"  MouseLeftButtonDown="left" Width="30" Height="30"/>
