windows icone aded

--- a/StudentManagerWPF/StudentManagerWPF/InsertDataWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/InsertDataWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:StudentManagerWPF"
         mc:Ignorable="d"
+            Icon="Assets/icone.png"
+
         Title="InsertDataWindow" Height="640" Width="400" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
