--- a/StudentManagerWPF/StudentManagerWPF/FiliereEdit.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/FiliereEdit.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentManagerWPF"
                 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    Icon="Assets/icone.png"
 
         mc:Ignorable="d"
         Title="FiliereEdit"  Height="300" Width="600 " ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
