--- a/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
+++ b/StudentManagerWPF/StudentManagerWPF/MenuWindow.xaml
@@ -8,6 +8,8 @@
           xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
         xmlns:local="clr-namespace:StudentManagerWPF"
         mc:Ignorable="d"
+            Icon="Assets/icone.png"
+
         Title="MenuWindow" Height="550" Width="1000" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Window.Resources>
         <local:MyViewModel x:Key="MyViewModel" />
